# cavendish-particle-tracks

./: .buildinfo  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  api.html  contributing.html  genindex.html  index.html  launch_debug.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  specifications.md  tox.ini  user-manual.html
.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  user-manual.doctree
.github/workflows/: deploy_docs.yml  lint_and_test.yml  test_and_deploy.yml
_modules/: index.html
_modules/cavendish_particle_tracks/: _main_widget.html  _widget.html  analysis.html
_sources/: index.rst.txt  user-manual.md.txt
docs/: api.rst  conf.py  index.rst  user-manual.md
src/cavendish_particle_tracks/: __init__.py  _analysis.py  _calculate.py  _decay_angles_dialog.py  _magnification_dialog.py  _main_widget.py  _set_fiducial_dialog.py  _settings.py  _stereoshift_dialog.py  _testdims.py  _widget.py  analysis.py  napari.yaml
src/cavendish_particle_tracks/_tests/: test_reader.py  test_widget.py  test_writer.py
tests/: conftest.py  test_calculation_functions.py  test_decay_angles_dialog.py  test_env.py  test_fiducial.py  test_magnification_dialog.py  test_main_measurements.py  test_misc.py  test_radius_calculation.py  test_reader.py  test_sample_data.py  test_save.py  test_stereoshift_dialog.py  test_widget.py
tests/data/: test_output_file.csv
windows/: cavendish_particle_tracks.bat  start_cpt.py
