[metadata]
name = cavendish-particle-tracks

description = A Napari plugin to perform a simple particle tracking analysis for the Cavendish laboratorys Undergraduate Part III Particle Tracks experiment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samcunliffe/cavendish-particle-tracks
author = Sam Cunliffe, Paula Alvarez Cartelle
author_email = s.cunliffe@ucl.ac.uk, palvarez@hep.phy.cam.ac.uk
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/samcunliffe/cavendish-particle-tracks/issues
    Documentation = https://github.com/samcunliffe/cavendish-particle-tracks#readme
    Source Code = https://github.com/samcunliffe/cavendish-particle-tracks
    User Support = https://github.com/samcunliffe/cavendish-particle-tracks/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    # magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    cavendish-particle-tracks = cavendish_particle_tracks:napari.yaml

[options.extras_require]
docs =
    sphinx
    pydata-sphinx-theme
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
